# somfy-protect-rs

./: .gitignore  Cargo.toml  README.md  devenv.nix  package-lock.json  somfy-project-openapi.json
.github/workflows/: build_and_test.yml
.openapi-generator/: FILES
docs/: AbstractLocation.md  ApiException.md  CoreScenarioApi.md  DefaultApi.md  DeviceAction.md  DeviceCompatibilityCollection.md  DeviceDefinition.md  DeviceOutputMinimal.md  DeviceSettingsGlobal.md  Diagnosis.md  DomesticAlarmOutputCollection.md  ExternalStorageInput.md  GatewayStatus.md  IloApi.md  IndoorCameraStatus.md  InstallOptionsHomeKit.md  InstallerSiteApi.md  InvitationApi.md  Job.md  LinkTwoStatus.md  LocationInput.md  LocationOutput.md  Mobile.md  NewPhoto.md  PhotoApi.md  Plan.md  PlanCvrCamera.md  PlanCvrStatus.md  PlanEmergencyNetworkStatus.md  PlanEmergencyStatus.md  PlanFeature.md  PlanGsmNetworkStatus.md  PlanPopup.md  RemoteStatus.md  RoomInput.md  RoomList.md  ScenarioAction.md  ScenarioApi.md  ScenarioCollection.md  ScenarioInput.md  (+36 more)
mock/: package-lock.json  package.json
mock/src/: list_compatible_devices.json  list_sites.json  server.js
somfy-protect-client/: Cargo.toml  build.rs
somfy-protect-client/src/: auth.rs  client.rs  lib.rs  websocket.rs
somfy-protect-client/tests/: integration_tests.rs  testcontainer.rs
somfy-protect-client/tests/resources/: list_devices.json
somfy-protect-openapi/: Cargo.toml  README.md  generate-code.sh  openapi-config.yml  somfy-protect-openapi.json
somfy-protect-openapi/.openapi-generator/: FILES
somfy-protect-openapi/docs/: AbstractGeoFence.md  AllInOnePlusStatus.md  AllInOneStatus.md  AssistantPasscode.md  BoxStatus.md  CalendarScenarioApi.md  CameraStatus.md  DefaultApi.md  DeviceAbstract.md  DeviceApi.md  DeviceCollection.md  DeviceCompatibility.md  DeviceCompatibilityCollection.md  DeviceInput.md  DeviceOutput.md  DeviceSettings.md  DeviceSettingsArmed.md  DeviceSettingsDisarmed.md  DeviceSettingsPartial.md  DeviceStatus.md  DiagnosisApi.md  ExtendOptions.md  ExtenderStatus.md  ExternalStorageOutput.md  Feedback.md  GeoFenceInput.md  GeoFenceOutput.md  HkpMode.md  InstallOptions.md  InstallerSiteApi.md  InstallerSiteCollection.md  InvitationApi.md  InvoiceApi.md  JobCollection.md  KeypadStatus.md  LinkTwoPlusStatus.md  LoraWanCover.md  MiscApi.md  MobileApi.md  MyfoxAroundOptions.md  (+74 more)
src/: client.rs
src/apis/: calendar_scenario_api.rs  configuration.rs  diagnosis_api.rs  ilo_api.rs  installer_site_api.rs  invitation_api.rs  invoice_api.rs  misc_api.rs  (+6 more)
tests/: integration_tests.rs
(+242 files in other folders)
