[package]
name = "somfy-protect-client"
version = "0.1.0"
authors = ["Jeremie Huchet"]
description = "Somfy Protect API client"
license = "GPL-3.0"
edition = "2021"

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
futures-util = { version = "^0.3", default-features = false, features = ["sink", "std"] }
log = "^0.4"
oauth2 = "^4.3"
prometheus = { version = "^0.13" }
reqwest = { version = "^0.11", features = ["json"] }
reqwest-middleware = "^0.2"
reqwest-prometheus-middleware = { path = "../../reqwest-prometheus-middleware" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
somfy-protect-openapi = { path = "../somfy-protect-openapi" }
task-local-extensions = "^0.1"
tokio-tungstenite = "^0.19"
url = "^2.2"

[dev-dependencies]
httpmock = "^0.6"
testcontainers = "^0.14"
tokio = "^1.28"

[build-dependencies]
anyhow = "^1.0"