[package]
name = "somfy-protect-client"
version = "0.1.0"
authors = ["Jeremie Huchet"]
description = "Somfy Protect API client"
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
oauth2 = "4.3"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
somfy-protect-openapi = { path = "../somfy-protect-openapi" }
task-local-extensions = "0.1"
tokio = "1.30"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.2"

[dev-dependencies]
httpmock = "0.7"
docker-api = "0.14"
test-context = "0.1"
tokio = "1.28"
